--- a/framework/template/service.html
+++ b/framework/template/service.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <script>
-      // if (typeof jsCore === 'object') {
-      //   jsCore.publish('serviceReady')
-      // }
+      if (typeof jsCore === 'object') {
+        jsCore.publish('serviceReady')
+      }
     </script>
   </body>
 </html>
