--- a/framework/template/view.ejs
+++ b/framework/template/view.ejs
@@ -10,7 +10,7 @@
     <style>
       <%- __TEMPLATE_CSS__ %>
     </style>
-    <script src="../../../../../framework/webview.js"></script>
+    <script src="../../../../framework/webview.js"></script>
   </head>
   <body>
     <dom-bind id="_binder">
