--- a/framework/template/service.ejs
+++ b/framework/template/service.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html" />
     <title>Service</title>
-    <script src="../../../framework/service.js"></script>
+    <script src="../../framework/service.js"></script>
     <script src="app-service.js"></script>
   </head>
   <body>
