--- a/framework/webview/components/reset.css
+++ b/framework/webview/components/reset.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   min-height: 100%;
   margin: 0;
+  padding: 0;
   user-select: none;
   overflow-x: hidden;
   -webkit-user-select: none;
