fix: 完善开发环境

--- a/framework/template/service.ejs
+++ b/framework/template/service.ejs
@@ -10,7 +10,7 @@
   <body>
     <script>
       if (typeof ns === 'object') {
-        ns.publish('serviceReady', { config: <%- __CONFIG__ %> }, "[]")
+        ns.publish('serviceReady', { config: <%- __CONFIG__ %> })
       }
     </script>
   </body>
