--- a/pack/template/service-worker.ejs
+++ b/pack/template/service-worker.ejs
@@ -1,6 +1,6 @@
-<%- __FRAMEWORK_SERVICE__ %>
+<%- __SERVICE__ %>
 
-<%- __TEMPLATE_JS__ %>
+<%- __JS__ %>
 
 if (typeof ns === 'object') {
   ns.publish('serviceReady', { config: <%- __CONFIG__ %> })
