--- a/devtools/client/index.less
+++ b/devtools/client/index.less
@@ -1,21 +1,30 @@
-html {
-  width: 100%;
-  height: 100%;
-}
-
 body {
-  width: 100%;
-  min-height: 100%;
   margin: 0;
   padding: 0;
 }
 
 #app {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden auto;
+  // overflow-y: auto;
 }
 
 .g-center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.g-hidden {
+  position: absolute;
+  display: none;
+  width: 0;
+  height: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -10;
 }
