--- a/pack/template/service.ejs
+++ b/pack/template/service.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html" />
     <title>Service</title>
+    <%- __ENV__ == 'devtools' ? '<script>window.env = "devtools";</script>' : '' %>
     <script src="../../framework/service.js"></script>
     <script src="app-service.js"></script>
   </head>
