feat: 初步跑起来

--- a/pack/template/service-worker.ejs
+++ b/pack/template/service-worker.ejs
@@ -2,6 +2,6 @@
 
 <%- __JS__ %>
 
-if (typeof ns === 'object') {
-  ns.publish('serviceReady', { config: <%- __CONFIG__ %> })
+if (typeof ma === 'object') {
+  ma.publish('serviceReady', { config: <%- __CONFIG__ %> })
 }
