--- a/devtools/client/components/top/index.less
+++ b/devtools/client/components/top/index.less
@@ -1,7 +1,7 @@
 .ma-top {
   height: 20px;
   line-height: 20px;
-  margin: 2px 0;
+  margin: 1px 0 2px;
   text-align: center;
   font-size: 14px;
 
