fix: 优化 devtools dev

--- a/devtools/client/index.less
+++ b/devtools/client/index.less
@@ -17,6 +17,7 @@ body {
   flex-direction: column;
   width: 375px;
   height: calc(100% - 80px);
+  max-height: 667px;
   margin: 0 auto;
   transform: translateY(40px);
   background-color: #fff;
