refactor: pack to ts

--- a/pack/templates/view.ejs
+++ b/pack/templates/view.ejs
@@ -19,7 +19,7 @@
   <body>
     <dom-bind id="_binder">
       <template>
-        <my-view id="app"><%- __HTML__ %></my-view>
+        <ma-view id="app"><%- __HTML__ %></ma-view>
       </template>
     </dom-bind>
     <script>
